test_regress/t/t_timing_unset2.out
%Error-NEEDTIMINGOPT: t/t_timing_off.v:27:5: Use --timing or --no-timing to specify how event controls should be handled
                                           : ... note: In instance 't'
   27 |     @e1;
      |     ^
                      ... For error description see https://verilator.org/warn/NEEDTIMINGOPT?v=latest
%Error-NEEDTIMINGOPT: t/t_timing_off.v:34:11: Use --timing or --no-timing to specify how delays should be handled
                                            : ... note: In instance 't'
   34 |   initial #2->e1;
      |           ^
%Error-NEEDTIMINGOPT: t/t_timing_off.v:38:11: Use --timing or --no-timing to specify how delays should be handled
                                            : ... note: In instance 't'
   38 |   initial #3 $stop;   
      |           ^
%Error-NEEDTIMINGOPT: t/t_timing_off.v:39:11: Use --timing or --no-timing to specify how delays should be handled
                                            : ... note: In instance 't'
   39 |   initial #1 @(e1, e2) #1 $stop;   
      |           ^
%Error-NEEDTIMINGOPT: t/t_timing_off.v:39:14: Use --timing or --no-timing to specify how event controls should be handled
                                            : ... note: In instance 't'
   39 |   initial #1 @(e1, e2) #1 $stop;   
      |              ^
%Error-NEEDTIMINGOPT: t/t_timing_off.v:39:24: Use --timing or --no-timing to specify how delays should be handled
                                            : ... note: In instance 't'
   39 |   initial #1 @(e1, e2) #1 $stop;   
      |                        ^
%Error: Exiting due to
